PROD-12-18-19/force-app/main/default/objects/Office__c/fields/Legacy_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Account_Id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Account ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>