PROD-12-18-19/force-app/main/default/objects/Office__c/fields/Legacy_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Account_Name__c</fullName>
    <label>Legacy Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>