PROD-12-18-19/force-app/main/default/objects/Office__c/fields/OfficeCaseSensitive__c.field-meta.xml
<CustomField>
    <fullName>OfficeCaseSensitive__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OfficeCaseSensitive</label>
    <type>Text</type>
</CustomField>