PROD-12-18-19/force-app/main/default/objects/Office__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>Zip</label>
    <length>15</length>
    <type>Text</type>
</CustomField>