PROD-12-18-19/force-app/main/default/objects/Office__c/fields/PSG_Primary_Marketing_Rep__c.field-meta.xml
<CustomField>
    <fullName>PSG_Primary_Marketing_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PSG Primary Marketing Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Office</relationshipName>
    <type>Lookup</type>
</CustomField>