PROD-12-18-19/force-app/main/default/objects/Office__c/fields/Total_PSG_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_PSG_Amount__c</fullName>
    <label>Advised PSG AUM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>